@@ -18,12 +18,13 @@
  */
 package org.elasticsearch.action.admin.cluster.node.tasks;
 
-import org.elasticsearch.action.Action;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.ActionRequest;
 import org.elasticsearch.action.ActionRequestBuilder;
 import org.elasticsearch.action.ActionResponse;
+import org.elasticsearch.action.ActionType;
 import org.elasticsearch.action.FailedNodeException;
+import org.elasticsearch.action.IndicesRequest;
 import org.elasticsearch.action.TaskOperationFailure;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.nodes.BaseNodeRequest;
@@ -37,23 +38,30 @@ import org.elasticsearch.action.support.tasks.BaseTasksResponse;
 import org.elasticsearch.action.support.tasks.TransportTasksAction;
 import org.elasticsearch.client.ElasticsearchClient;
 import org.elasticsearch.cluster.ClusterName;
-import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.inject.Inject;
+import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
-import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.ToXContent.Params;
+import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.common.xcontent.ToXContentFragment;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.plugins.ActionPlugin;
+import org.elasticsearch.plugins.NetworkPlugin;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.tasks.CancellableTask;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.tasks.TaskId;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.transport.Transport;
+import org.elasticsearch.transport.TransportException;
+import org.elasticsearch.transport.TransportInterceptor;
+import org.elasticsearch.transport.TransportRequest;
+import org.elasticsearch.transport.TransportRequestOptions;
+import org.elasticsearch.transport.TransportResponse;
+import org.elasticsearch.transport.TransportResponseHandler;
 import org.elasticsearch.transport.TransportService;
 
 import java.io.IOException;
@@ -64,13 +72,15 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 
+import static org.elasticsearch.action.admin.cluster.node.tasks.get.GetTaskAction.TASKS_ORIGIN;
 import static org.elasticsearch.test.ESTestCase.awaitBusy;
 
 /**
  * A plugin that adds a cancellable blocking test task of integration testing of the task manager.
  */
-public class TestTaskPlugin extends Plugin implements ActionPlugin {
+public class TestTaskPlugin extends Plugin implements ActionPlugin, NetworkPlugin {
 
     @Override
     public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
@@ -81,6 +91,16 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
     @Override
     public Collection<String> getTaskHeaders() {
         return Collections.singleton("Custom-Task-Header");
+    }
+
+    /**
+     * Intercept transport requests to verify that all of the ones that should
+     * have the origin set <strong>do</strong> have the origin set and the ones
+     * that should not have the origin set <strong>do not</strong> have it set.
+     */
+    @Override
+    public List<TransportInterceptor> getTransportInterceptors(NamedWriteableRegistry namedWriteableRegistry, ThreadContext threadContext) {
+       return Collections.singletonList(new OriginAssertingInterceptor(threadContext));
     }
 
     static class TestTask extends CancellableTask {
@@ -107,8 +127,8 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
 
     public static class NodeResponse extends BaseNodeResponse {
 
-        protected NodeResponse() {
-            super();
+        public NodeResponse(StreamInput in) throws IOException {
+            super(in);
         }
 
         public NodeResponse(DiscoveryNode node) {
@@ -118,8 +138,8 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
 
     public static class NodesResponse extends BaseNodesResponse<NodeResponse> implements ToXContentFragment {
 
-        NodesResponse() {
-
+        public NodesResponse(StreamInput in) throws IOException {
+            super(in);
         }
 
         public NodesResponse(ClusterName clusterName, List<NodeResponse> nodes, List<FailedNodeException> failures) {
@@ -128,12 +148,12 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
 
         @Override
         protected List<NodeResponse> readNodesFrom(StreamInput in) throws IOException {
-            return in.readStreamableList(NodeResponse::new);
+            return in.readList(NodeResponse::new);
         }
 
         @Override
         protected void writeNodesTo(StreamOutput out, List<NodeResponse> nodes) throws IOException {
-            out.writeStreamableList(nodes);
+            out.writeList(nodes);
         }
 
         public int getFailureCount() {
@@ -149,39 +169,29 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
 
     public static class NodeRequest extends BaseNodeRequest {
         protected String requestName;
-        protected String nodeId;
         protected boolean shouldBlock;
 
-        public NodeRequest() {
-            super();
-        }
-
-        public NodeRequest(NodesRequest request, String nodeId, boolean shouldBlock) {
-            super(nodeId);
-            requestName = request.requestName;
-            this.nodeId = nodeId;
-            this.shouldBlock = shouldBlock;
-        }
-
-        @Override
-        public void readFrom(StreamInput in) throws IOException {
-            super.readFrom(in);
+        public NodeRequest(StreamInput in) throws IOException {
+            super(in);
             requestName = in.readString();
-            nodeId = in.readString();
             shouldBlock = in.readBoolean();
+        }
+
+        public NodeRequest(NodesRequest request, boolean shouldBlock) {
+            requestName = request.requestName;
+            this.shouldBlock = shouldBlock;
         }
 
         @Override
         public void writeTo(StreamOutput out) throws IOException {
             super.writeTo(out);
             out.writeString(requestName);
-            out.writeString(nodeId);
             out.writeBoolean(shouldBlock);
         }
 
         @Override
         public String getDescription() {
-            return "NodeRequest[" + requestName + ", " + nodeId + "]";
+            return "NodeRequest[" + requestName + "]";
         }
 
         @Override
@@ -196,8 +206,12 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
         private boolean shouldBlock = true;
         private boolean shouldFail = false;
 
-        NodesRequest() {
-            super();
+        NodesRequest(StreamInput in) throws IOException {
+            super(in);
+            requestName = in.readString();
+            shouldStoreResult = in.readBoolean();
+            shouldBlock = in.readBoolean();
+            shouldFail = in.readBoolean();
         }
 
         public NodesRequest(String requestName, String... nodesIds) {
@@ -231,15 +245,6 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
         }
 
         @Override
-        public void readFrom(StreamInput in) throws IOException {
-            super.readFrom(in);
-            requestName = in.readString();
-            shouldStoreResult = in.readBoolean();
-            shouldBlock = in.readBoolean();
-            shouldFail = in.readBoolean();
-        }
-
-        @Override
         public void writeTo(StreamOutput out) throws IOException {
             super.writeTo(out);
             out.writeString(requestName);
@@ -267,11 +272,9 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
     public static class TransportTestTaskAction extends TransportNodesAction<NodesRequest, NodesResponse, NodeRequest, NodeResponse> {
 
         @Inject
-        public TransportTestTaskAction(Settings settings, ThreadPool threadPool,
-                                       ClusterService clusterService, TransportService transportService) {
-            super(settings, TestTaskAction.NAME, threadPool, clusterService, transportService,
-                  new ActionFilters(new HashSet<>()), new IndexNameExpressionResolver(Settings.EMPTY),
-                  NodesRequest::new, NodeRequest::new, ThreadPool.Names.GENERIC, NodeResponse.class);
+        public TransportTestTaskAction(ThreadPool threadPool, ClusterService clusterService, TransportService transportService) {
+            super(TestTaskAction.NAME, threadPool, clusterService, transportService, new ActionFilters(new HashSet<>()),
+                NodesRequest::new, NodeRequest::new, ThreadPool.Names.GENERIC, NodeResponse.class);
         }
 
         @Override
@@ -283,13 +286,13 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
         }
 
         @Override
-        protected NodeRequest newNodeRequest(String nodeId, NodesRequest request) {
-            return new NodeRequest(request, nodeId, request.getShouldBlock());
+        protected NodeRequest newNodeRequest(NodesRequest request) {
+            return new NodeRequest(request, request.getShouldBlock());
         }
 
         @Override
-        protected NodeResponse newNodeResponse() {
-            return new NodeResponse();
+        protected NodeResponse newNodeResponse(StreamInput in) throws IOException {
+            return new NodeResponse(in);
         }
 
         @Override
@@ -315,32 +318,21 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
             logger.info("Test task finished on the node {}", clusterService.localNode());
             return new NodeResponse(clusterService.localNode());
         }
-
-        @Override
-        protected NodeResponse nodeOperation(NodeRequest request) {
-            throw new UnsupportedOperationException("the task parameter is required");
-        }
-
     }
 
-    public static class TestTaskAction extends Action<NodesRequest, NodesResponse> {
+    public static class TestTaskAction extends ActionType<NodesResponse> {
 
         public static final TestTaskAction INSTANCE = new TestTaskAction();
         public static final String NAME = "cluster:admin/tasks/test";
 
         private TestTaskAction() {
-            super(NAME);
-        }
-
-        @Override
-        public NodesResponse newResponse() {
-            return new NodesResponse();
+            super(NAME, NodesResponse::new);
         }
     }
 
     public static class NodesRequestBuilder extends NodesOperationRequestBuilder<NodesRequest, NodesResponse, NodesRequestBuilder> {
 
-        protected NodesRequestBuilder(ElasticsearchClient client, Action<NodesRequest, NodesResponse> action) {
+        protected NodesRequestBuilder(ElasticsearchClient client, ActionType<NodesResponse> action) {
             super(client, action, new NodesRequest("test"));
         }
 
@@ -378,6 +370,13 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
 
 
     public static class UnblockTestTasksRequest extends BaseTasksRequest<UnblockTestTasksRequest> {
+
+        UnblockTestTasksRequest() {}
+
+        UnblockTestTasksRequest(StreamInput in) throws IOException {
+            super(in);
+        }
+
         @Override
         public boolean match(Task task) {
             return task instanceof TestTask && super.match(task);
@@ -388,19 +387,14 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
 
         private List<UnblockTestTaskResponse> tasks;
 
-        public UnblockTestTasksResponse() {
-            super(null, null);
-        }
-
         public UnblockTestTasksResponse(List<UnblockTestTaskResponse> tasks, List<TaskOperationFailure> taskFailures, List<? extends
             FailedNodeException> nodeFailures) {
             super(taskFailures, nodeFailures);
-            this.tasks = tasks == null ? Collections.emptyList() : Collections.unmodifiableList(new ArrayList<>(tasks));
+            this.tasks = tasks == null ? Collections.emptyList() : List.copyOf(tasks);
         }
 
-        @Override
-        public void readFrom(StreamInput in) throws IOException {
-            super.readFrom(in);
+        public UnblockTestTasksResponse(StreamInput in) throws IOException {
+            super(in);
             int taskCount = in.readVInt();
             List<UnblockTestTaskResponse> builder = new ArrayList<>();
             for (int i = 0; i < taskCount; i++) {
@@ -426,12 +420,9 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
         UnblockTestTasksResponse, UnblockTestTaskResponse> {
 
         @Inject
-        public TransportUnblockTestTasksAction(Settings settings,ThreadPool threadPool, ClusterService
-            clusterService,
-                                               TransportService transportService) {
-            super(settings, UnblockTestTasksAction.NAME, threadPool, clusterService, transportService, new ActionFilters(new
-                HashSet<>()), new IndexNameExpressionResolver(Settings.EMPTY),
-                UnblockTestTasksRequest::new, UnblockTestTasksResponse::new, ThreadPool.Names.MANAGEMENT);
+        public TransportUnblockTestTasksAction(ClusterService clusterService, TransportService transportService) {
+            super(UnblockTestTasksAction.NAME, clusterService, transportService, new ActionFilters(new HashSet<>()),
+                  UnblockTestTasksRequest::new, UnblockTestTasksResponse::new, UnblockTestTaskResponse::new, ThreadPool.Names.MANAGEMENT);
         }
 
         @Override
@@ -442,11 +433,6 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
         }
 
         @Override
-        protected UnblockTestTaskResponse readTaskResponse(StreamInput in) throws IOException {
-            return new UnblockTestTaskResponse(in);
-        }
-
-        @Override
         protected void taskOperation(UnblockTestTasksRequest request, Task task, ActionListener<UnblockTestTaskResponse> listener) {
             ((TestTask) task).unblock();
             listener.onResponse(new UnblockTestTaskResponse());
@@ -454,27 +440,88 @@ public class TestTaskPlugin extends Plugin implements ActionPlugin {
 
     }
 
-    public static class UnblockTestTasksAction extends Action<UnblockTestTasksRequest, UnblockTestTasksResponse> {
+    public static class UnblockTestTasksAction extends ActionType<UnblockTestTasksResponse> {
 
         public static final UnblockTestTasksAction INSTANCE = new UnblockTestTasksAction();
         public static final String NAME = "cluster:admin/tasks/testunblock";
 
         private UnblockTestTasksAction() {
-            super(NAME);
-        }
-
-        @Override
-        public UnblockTestTasksResponse newResponse() {
-            return new UnblockTestTasksResponse();
+            super(NAME, UnblockTestTasksResponse::new);
         }
     }
 
     public static class UnblockTestTasksRequestBuilder extends ActionRequestBuilder<UnblockTestTasksRequest, UnblockTestTasksResponse> {
 
         protected UnblockTestTasksRequestBuilder(ElasticsearchClient client,
-                                                 Action<UnblockTestTasksRequest, UnblockTestTasksResponse> action) {
+                                                 ActionType<UnblockTestTasksResponse> action) {
             super(client, action, new UnblockTestTasksRequest());
         }
     }
 
+    private static class OriginAssertingInterceptor implements TransportInterceptor {
+        private final ThreadContext threadContext;
+
+        private OriginAssertingInterceptor(ThreadContext threadContext) {
+            this.threadContext = threadContext;
+        }
+
+        @Override
+        public AsyncSender interceptSender(AsyncSender sender) {
+            return new AsyncSender() {
+                @Override
+                public <T extends TransportResponse> void sendRequest(
+                        Transport.Connection connection, String action, TransportRequest request,
+                        TransportRequestOptions options, TransportResponseHandler<T> handler) {
+                    if (action.startsWith("indices:data/write/bulk[s]")) {
+                        /*
+                         * We can't reason about these requests because
+                         * *sometimes* they should have the origin, if they are
+                         * running on the node that stores the task. But
+                         * sometimes they won't be and in that case they don't
+                         * need the origin. Either way, the interesting work is
+                         * done by checking that the main bulk request
+                         * (without the [s] part) has the origin.
+                         */
+                        sender.sendRequest(connection, action, request, options, handler);
+                        return;
+                    }
+                    String expectedOrigin = shouldHaveOrigin(action, request) ? TASKS_ORIGIN : null;
+                    String actualOrigin = threadContext.getTransient(ThreadContext.ACTION_ORIGIN_TRANSIENT_NAME);
+                    if (Objects.equals(expectedOrigin, actualOrigin)) {
+                        sender.sendRequest(connection, action, request, options, handler);
+                        return;
+                    }
+                    handler.handleException(new TransportException("should have origin of ["
+                            + expectedOrigin + "] but was [" + actualOrigin + "] action was ["
+                            + action + "][" + request + "]"));
+                }
+            };
+        }
+
+        private boolean shouldHaveOrigin(String action, TransportRequest request) {
+            if (false == action.startsWith("indices:")) {
+                /*
+                 * The Tasks API never uses origin with non-indices actions.
+                 */
+                return false;
+            }
+            if (       action.startsWith("indices:admin/refresh")
+                    || action.startsWith("indices:data/read/search")) {
+                /*
+                 * The test refreshes and searches to count the number of tasks
+                 * in the index and the Tasks API never does either.
+                 */
+                return false;
+            }
+            if (false == (request instanceof IndicesRequest)) {
+                return false;
+            }
+            IndicesRequest ir = (IndicesRequest) request;
+            /*
+             * When the API Tasks API makes an indices request it only every
+             * targets the .tasks index. Other requests come from the tests.
+             */
+            return Arrays.equals(new String[] {".tasks"}, ir.indices());
+        }
+    }
 }
